# FYS-STK4155

./: .gitignore  README.md  pyproject.toml  uv_README.md
project1/: Makefile  README.md  gd_sgd.ipynb  main_bvto.py  main_gd.py  main_gd_comparison.py  main_lasso.py  main_ols.py  main_resampling.py  main_ridge.py  main_stochastic.py  ols_ridge_lasso_results.ipynb  project1_test.py  pyproject.toml  requirements.txt  results.ipynb  uv_example.py
project1/analysis/: ols_runge.py
project1/code/: Makefile  main_gd.py  main_lasso.py  main_ols.py  main_resampling.py  main_stochastic.py  results.ipynb
project1/code/src/: regression.py  utils.py
project1/cv_data/noise_high/seed_42/: cv_high_seed42_noise_std0.3.pkl
project1/cv_data/noise_high/seed_44/: cv_high_seed44_noise_std0.3.pkl
project1/cv_data/noise_high/seed_46/: cv_high_seed46_noise_std0.3.pkl
project1/cv_data/noise_high/seed_50/: cv_high_seed50_noise_std0.3.pkl
project1/cv_data/noise_low/seed_42/: cv_low_seed42_noise_std0.1.pkl
project1/cv_data/noise_low/seed_51/: cv_low_seed51_noise_std0.1.pkl
project1/cv_data/noise_medium/seed_44/: cv_medium_seed44_noise_std0.2.pkl
project1/cv_data/noise_medium/seed_48/: cv_medium_seed48_noise_std0.2.pkl
project1/cv_data/noise_medium/seed_50/: cv_medium_seed50_noise_std0.2.pkl
project1/cv_data/noise_medium/seed_51/: cv_medium_seed51_noise_std0.2.pkl
project1/cv_results/noise_high/seed_42/: cv_high_seed42_noise_std0.3.pkl
project1/cv_results/noise_high/seed_43/: cv_high_seed43_noise_std0.3.pkl
project1/src/: analysis.py  plotting.py  regression.py  utils.py
project1/src/project1/: __init__.py
project1/src/project1/utils/: plot.py  (+2 more)
project1/tests/: conftest.py  test_package.py
project1/tests/regression/: test_features.py  test_functions.py  test_ols.py  test_ridge.py
project3/: README.md  pyproject.toml
project3/code/: main.py
project3/code/data/: sweep_GeLU.csv  sweep_ReLU.csv  sweep_SiLU.csv  sweep_sin.csv  sweep_sine.csv  sweep_swish.csv  sweep_tanh.csv
project3/code/notebooks/: main.ipynb
project3/code/src/: analytical.py  experiment.py  fd_scheme.py  grids.py  pde.py  pinn.py  plotting.py  utils.py
(+78 files in other folders)
