[project]
name = "project3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.1",
    "jax>=0.8.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "optax>=0.2.6",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "notebook>=7.5.0",
]
